--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router": "^6.8.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^2.1.3",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
